--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^12.0.3"
